@@ -31,13 +31,21 @@ class NavigateThroughPosesNavigator : public nav2_core::Navigator<nav2_msgs::act
 public:
   using ActionT = nav2_msgs::action::NavigateThroughPoses;
 
+  /**
+   * @brief A constructor for NavigateThroughPosesNavigator
+   */
   NavigateThroughPosesNavigator() : Navigator() {};
 
+  /**
+   * @brief A configure state transition to configure navigator's state
+   * @param node Weakptr to the lifecycle node
+   */
   bool configure(
     rclcpp_lifecycle::LifecycleNode::WeakPtr node) override;
 
   /**
    * @brief Get action name for this navigator
+   * @return string Name of action server
    */
   std::string getName() {return std::string("navigate_through_poses");}
 
@@ -47,8 +55,10 @@ protected:
    * @brief A callback to be called when a new goal is received by the BT action server
    * Can be used to check if goal is valid and put values on
    * the blackboard which depend on the received goal
+   * @param goal Action template's goal message
+   * @return bool if goal was received successfully to be processed
    */
-  bool onGoalReceived(ActionT::Goal::ConstSharedPtr goal) override;
+  bool goalReceived(ActionT::Goal::ConstSharedPtr goal) override;
 
   /**
    * @brief A callback that defines execution that happens on one iteration through the BT
@@ -64,8 +74,9 @@ protected:
   /**
    * @brief A callback that is called when a the action is completed, can fill in
    * action result message or indicate that this action is done.
+   * @param result Action template result message to populate
    */
-  void onCompletion(typename ActionT::Result::SharedPtr result) override;
+  void goalCompleted(typename ActionT::Result::SharedPtr result) override;
 
   /**
    * @brief Goal pose initialization on the blackboard
